chore: remove usage of shaded classes
Removes usage of shaded `IOUtils` class coming from transitive test-only
dependency in favor of plain standard JVM methods.